# rust-file-explorer

./: Cargo.toml  README.md
src/: app.rs  fs_utils.rs  lib.rs  main.rs  ui.rs
