[package]
name = "rust_gui"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["syntect", "image"] }
env_logger = "0.11.8"
syntect = "5.3.0"
iced = "0.14.0"
iced_aw = { version = "0.13.0", features = ["full"] }