[package]
name = "rust_gui"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
env_logger = "0.11.8"
syntect = "5.3.0"
iced = { version = "0.14.0", features = ["tokio"] }
iced_aw = { version = "0.13.0", features = ["full"] }
dark-light = "2.0.0"
tokio = { version = "1", features = ["full"] }
humansize = "2.1.3"
chrono = "0.4.42"